...
    override func viewDidLoad() {
        super.viewDidLoad()

        view.accessibilityIdentifier = "settings.view"

        self.title = "Settings"
        let doneButton = UIBarButtonItem(barButtonSystemItem: .done, target: self, action: #selector(doneTapped))
        doneButton.accessibilityIdentifier = "settings.doneButton"
        self.navigationItem.rightBarButtonItem = doneButton

        setupSwiftUIHost()

        themeCancellable = ThemeStore.shared.publisher
...
